...
        android:layout_marginEnd="68dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Settings"
        android:onClick="goToSettingsActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/hiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="Hi!"
        app:layout_constraintBottom_toTopOf="@+id/whatdoyouwant"
        app:layout_constraintEnd_toEndOf="parent"
...
